--- a/trunk/ talapatram --username ramavorray/Talapatram.rc
+++ b/trunk/ talapatram --username ramavorray/Talapatram.rc
@@ -26,20 +26,22 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 235, 66
+IDD_ABOUTBOX DIALOGEX 0, 0, 235, 73
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "About Talapatram"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_ABOUTDLG_IMG,11,19,21,20
+    ICON            IDR_MAINFRAME,IDC_ABOUTDLG_IMG,11,26,21,20
     LTEXT           "Talapatram Version 2.0",IDC_STATIC,40,12,119,8,
                     SS_NOPREFIX
-    LTEXT           "© 2007, Vorray Software.",IDC_STATIC,40,45,119,8
+    LTEXT           "© 2008, Vorray Software.",IDC_STATIC,40,52,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,16,WS_GROUP
-    LTEXT           "Rama Aravind Vorray",IDC_STATIC,40,23,69,8
-    LTEXT           "http://www.funnotes.net/talapatram",IDC_STATIC,40,34,
-                    120,8
+    LTEXT           "Rama Aravind Vorray",IDC_STATIC,40,22,119,8
+    LTEXT           "http://www.funnotes.net/talapatram",IDC_STATIC,40,32,
+                    119,8
+    LTEXT           "http://code.google.com/p/talapatram",IDC_STATIC,40,42,
+                    119,8
 END
 
 IDD_TALAPATRAM_DIALOG DIALOGEX 10, 10, 621, 205
@@ -49,19 +51,20 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Talapatram"
 FONT 9, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Fonts?",IDC_FONTHELPER,11,7,35,14
-    PUSHBUTTON      "Save",IDC_SAVE_CONTENTS,50,7,35,14
-    COMBOBOX        IDC_LANGLIST2,89,8,46,111,CBS_DROPDOWN | CBS_SORT | 
+    PUSHBUTTON      "Fonts?",IDC_FONTHELPER,11,9,35,14
+    PUSHBUTTON      "Save",IDC_SAVE_CONTENTS,50,9,35,14
+    COMBOBOX        IDC_LANGLIST2,89,10,46,111,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Keyboard",IDC_DISP_KEYBOARD,139,7,50,14
-    PUSHBUTTON      "*",IDC_ASTERISK,193,7,17,14,BS_ICON
-    PUSHBUTTON      ";",IDC_SEMICOLON,214,7,17,14,BS_ICON
-    PUSHBUTTON      "!",IDC_EXCLAIM,235,7,17,14,BS_ICON
-    PUSHBUTTON      "?",IDC_QMARK,256,7,17,14,BS_ICON
-    PUSHBUTTON      ":",IDC_COLON,277,7,17,14,BS_ICON
-    PUSHBUTTON      "'",IDC_SAPOS,298,7,17,14,BS_ICON
-    PUSHBUTTON      """",IDC_DAPOS,319,7,17,14,BS_ICON
-    PUSHBUTTON      "About?",IDC_ABOUT,340,7,32,14
+    DEFPUSHBUTTON   "Keyboard",IDC_DISP_KEYBOARD,139,9,50,14
+    PUSHBUTTON      "*",IDC_ASTERISK,193,9,17,14,BS_ICON
+    PUSHBUTTON      ";",IDC_SEMICOLON,214,9,17,14,BS_ICON
+    PUSHBUTTON      "!",IDC_EXCLAIM,235,9,17,14,BS_ICON
+    PUSHBUTTON      "?",IDC_QMARK,256,9,17,14,BS_ICON
+    PUSHBUTTON      ":",IDC_COLON,277,9,17,14,BS_ICON
+    PUSHBUTTON      "'",IDC_SAPOS,298,9,17,14,BS_ICON
+    PUSHBUTTON      """",IDC_DAPOS,319,9,17,14,BS_ICON
+    PUSHBUTTON      "About?",IDC_ABOUT,340,9,32,14
+    GROUPBOX        "Special Characters",IDC_STATIC,191,0,147,25
 END
 
 IDD_TALAPATRAM_DIALOG1 DIALOGEX 0, 0, 638, 190
@@ -364,14 +367,13 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 228
         TOPMARGIN, 7
-        BOTTOMMARGIN, 59
+        BOTTOMMARGIN, 66
     END
 
     IDD_TALAPATRAM_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 615
-        TOPMARGIN, 7
         BOTTOMMARGIN, 198
     END
 
