--- a/trunk/ talapatram --username ramavorray/Talapatram.vcproj
+++ b/trunk/ talapatram --username ramavorray/Talapatram.vcproj
@@ -171,6 +171,9 @@
 				RelativePath=".\Resource.h">
 			</File>
 			<File
+				RelativePath=".\resource.hm">
+			</File>
+			<File
 				RelativePath=".\stdafx.h">
 			</File>
 			<File
@@ -187,6 +190,9 @@
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			<File
+				RelativePath=".\res\caret1.bmp">
+			</File>
 			<File
 				RelativePath=".\res\ico00001.ico">
 			</File>
