--- a/trunk/ talapatram --username ramavorray/Talapatram.rc
+++ b/trunk/ talapatram --username ramavorray/Talapatram.rc
@@ -37,8 +37,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION |
 CAPTION "About Talapatram"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_ABOUTDLG_IMG,11,26,21,20
-    LTEXT           "Talapatram Version 2.0",IDC_STATIC,40,12,119,8,
+    ICON            IDR_MAINFRAME,IDC_ABOUTDLG_IMG,11,26,20,20
+    LTEXT           "Talapatram Version 2.1",IDC_STATIC,40,12,119,8,
                     SS_NOPREFIX
     LTEXT           "© 2008, Vorray Software.",IDC_STATIC,40,52,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,16,WS_GROUP
@@ -326,8 +326,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,0
- PRODUCTVERSION 2,0,0,0
+ FILEVERSION 2,1,0,0
+ PRODUCTVERSION 2,1,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -342,14 +342,15 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
+            VALUE "Comments", "Open Source Project Hosted on Google Code. http://code.google.com/p/talapatram"
             VALUE "CompanyName", "Vorray Software"
-            VALUE "FileDescription", "Talapatram V2.0"
-            VALUE "FileVersion", "2.0.0.0"
+            VALUE "FileDescription", "Talapatram V2.1"
+            VALUE "FileVersion", "2.1.0.0"
             VALUE "InternalName", "Talapatram"
             VALUE "LegalCopyright", "© Vorray Software.  All rights reserved."
             VALUE "OriginalFilename", "Talapatram.exe"
             VALUE "ProductName", "Indian Languages Editor & Keyboard Layouts Software"
-            VALUE "ProductVersion", "2.0.0.0"
+            VALUE "ProductVersion", "2.1.0.0"
         END
     END
     BLOCK "VarFileInfo"
