UI Modified and system wide locale change, reverting to original locale at exit are included. todo: add a keyboard hook to monitor for current active window.

--- a/ talapatram --username ramavorray/Talapatram.rc
+++ b/ talapatram --username ramavorray/Talapatram.rc
@@ -4,7 +4,7 @@
 
 // Generated Help ID header file
 #define APSTUDIO_HIDDEN_SYMBOLS
-#include "resource.h"
+#include "resource.hm"
 #undef APSTUDIO_HIDDEN_SYMBOLS
 
 #define APSTUDIO_READONLY_SYMBOLS
@@ -32,49 +32,42 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 235, 73
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About Talapatram"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_ABOUTDLG_IMG,11,26,20,20
-    LTEXT           "Talapatram Version 2.1",IDC_STATIC,40,12,119,8,
-                    SS_NOPREFIX
+    LTEXT           "Talapatram Version 2.1",IDC_STATIC,40,12,119,8,SS_NOPREFIX
     LTEXT           "© 2008, Vorray Software.",IDC_STATIC,40,52,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,16,WS_GROUP
     LTEXT           "Rama Aravind Vorray",IDC_STATIC,40,22,119,8
-    LTEXT           "http://www.funnotes.net/talapatram",IDC_STATIC,40,32,
-                    119,8
-    LTEXT           "http://code.google.com/p/talapatram",IDC_STATIC,40,42,
-                    119,8
+    LTEXT           "http://www.funnotes.net/talapatram",IDC_STATIC,40,32,119,8
+    LTEXT           "http://code.google.com/p/talapatram",IDC_STATIC,40,42,119,8
 END
 
-IDD_TALAPATRAM_DIALOG DIALOGEX 10, 10, 621, 205
-STYLE DS_SETFONT | DS_3DLOOK | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | 
-    WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+IDD_TALAPATRAM_DIALOG DIALOGEX 0, 0, 219, 67
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Talapatram"
-FONT 9, "Microsoft Sans Serif", 400, 0, 0x0
+FONT 9, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Fonts?",IDC_FONTHELPER,11,9,35,14
-    PUSHBUTTON      "Save",IDC_SAVE_CONTENTS,50,9,35,14
-    COMBOBOX        IDC_LANGLIST2,89,10,46,111,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Keyboard",IDC_DISP_KEYBOARD,139,9,50,14
-    PUSHBUTTON      "*",IDC_ASTERISK,193,9,17,14,BS_ICON
-    PUSHBUTTON      ";",IDC_SEMICOLON,214,9,17,14,BS_ICON
-    PUSHBUTTON      "!",IDC_EXCLAIM,235,9,17,14,BS_ICON
-    PUSHBUTTON      "?",IDC_QMARK,256,9,17,14,BS_ICON,0,IDC_QMARK
-    PUSHBUTTON      ":",IDC_COLON,277,9,17,14,BS_ICON
-    PUSHBUTTON      "'",IDC_SAPOS,298,9,17,14,BS_ICON
-    PUSHBUTTON      """",IDC_DAPOS,319,9,17,14,BS_ICON
-    PUSHBUTTON      "About?",IDC_ABOUT,340,9,32,14
-    GROUPBOX        "Special Characters",IDC_STATIC,191,0,147,25
+    PUSHBUTTON      "Fonts?",IDC_FONTHELPER,11,9,32,14
+    PUSHBUTTON      "Save",IDC_SAVE_CONTENTS,43,9,29,14
+    COMBOBOX        IDC_LANGLIST2,73,10,67,111,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Keyboard",IDC_DISP_KEYBOARD,141,9,35,14
+    PUSHBUTTON      "*",IDC_ASTERISK,13,38,17,14,BS_ICON
+    PUSHBUTTON      ";",IDC_SEMICOLON,34,38,17,14,BS_ICON
+    PUSHBUTTON      "!",IDC_EXCLAIM,55,38,17,14,BS_ICON
+    PUSHBUTTON      "?",IDC_QMARK,76,38,17,14,BS_ICON,0,HIDC_QMARK
+    PUSHBUTTON      ":",IDC_COLON,97,38,17,14,BS_ICON
+    PUSHBUTTON      "'",IDC_SAPOS,118,38,17,14,BS_ICON
+    PUSHBUTTON      """",IDC_DAPOS,139,38,17,14,BS_ICON
+    PUSHBUTTON      "About?",IDC_ABOUT,177,9,32,14
+    GROUPBOX        "Special Characters",IDC_STATIC,11,29,147,27
 END
 
 IDD_TALAPATRAM_DIALOG1 DIALOGEX 0, 0, 638, 190
-STYLE DS_SETFONT | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | 
-    WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Talapatram"
 FONT 9, "Microsoft Sans Serif", 400, 0, 0x0
@@ -379,8 +372,8 @@ BEGIN
     IDD_TALAPATRAM_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 615
-        BOTTOMMARGIN, 198
+        RIGHTMARGIN, 213
+        BOTTOMMARGIN, 60
     END
 
     IDD_TALAPATRAM_DIALOG1, DIALOG
