--- a/trunk/ talapatram --username ramavorray/Talapatram.vcproj
+++ b/trunk/ talapatram --username ramavorray/Talapatram.vcproj
@@ -250,6 +250,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource.hm"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
